--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -15,24 +15,25 @@ OneDrive网盘地址：
 * 网盘目录说明
 
 ```
-├── 0-用前必读
-│   └── 资料目录说明.md
-├── 1-SDK源码
-│   └── RK356X Linux
+├── 1-SDK Source 软件源码
+│   ├── rk356x-android13
+│   └── rk356x-linux
+│       ├── buildroot-dl-20230607.tar.gz
 │       ├── linaro-rootfs-20230524.tar.gz
 │       ├── rk356x-linux-20230524.tar.gz
 │       └── ubuntu-rootfs-20230523.tar.gz
-├── 2-系统镜像
-│   └── RK3566 TX66
-│       ├── Android11 TV
+├── 2-System Image 系统镜像
+│   └── RK3566-TX66
+│       ├── Android11-TV
+│       ├── Android13
 │       ├── Debian11
 │       └── Ubuntu2004
-├── 3-硬件资料
-└── 4-开发工具
-    ├── ADB工具
-    ├── USB镜像烧录工具
-    ├── USB驱动
-    └── 串口调试工具
+├── 3-Hardware Data 硬件资料
+└── 4-Development Tools 开发工具
+    ├── ADB Tool
+    ├── UART Debug Tool 串口调试工具
+    ├── USB Driver USB驱动
+    └── USB Image Burn Tool 镜像烧录工具
 ```
 
 
@@ -89,14 +90,15 @@ USB驱动网盘目录：4-开发工具\USB驱动\DriverAssitant\_v5.12.zip
 
 镜像文件可通过以下两种方式获取：网盘下载、SDK编译
 
-SDK编译详细步骤参考文档 \[02初级篇-sdk编译]
+SDK编译详细步骤参考文档 \[02-SDK编译]
 
 镜像文件网盘目录：
 
 ```
-├── 2-系统镜像
+├── 2-System Image 系统镜像
     └── RK3566-TX66
         ├── Android11-TV
+        ├── Android13
         ├── Debian11
         └── Ubuntu2004
 ```
