--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -2,17 +2,9 @@
 
 
 
-
-
-
-
 ## 1. 扩展引脚
 
 ### 引脚列表
-
-
-
-
 
 
 
@@ -38,8 +30,6 @@ $ echo 1 > /sys/class/leds/
 
 
 
-
-
 ## 3. UART
 
 ### 调试串口使用
@@ -50,29 +40,21 @@ $ echo 1 > /sys/class/leds/
 
 
 
-操作步骤
-
 ![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
 
+操作步骤
 
-
-
-
-
-
-### UBUNTU串口通讯程序
-
-
+1. 新建会话窗口
+2. 选择会话窗口类型为serial
+3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
+4. 选择串口波特率1500000
+5. 启动会话窗口
 
 
 
 
 
 ## 4. 以太网
-
-### 双以太网使用
-
-
 
 ### ETH MAC地址烧录
 
@@ -204,8 +186,6 @@ SSD型号：
 
 
 
-
-
 ## 13. MIPI CAMERA
 
 
@@ -228,7 +208,7 @@ SSD型号：
 
 ### GLmark2性能测试
 
-RK 文件系统内置glmark2-es性能测试工具
+RK Linux文件系统内置glmark2-es性能测试工具
 
 板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始GPU性能测试
 
@@ -247,21 +227,9 @@ $ source /rockchip_test/gpu/test_fullscreen_glmark2.sh
 
 
 
-### chromium视频测试
-
-板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始chromium视频测试
-
-```
-$ source /rockchip-test/chromium/test_chromium_with_video.sh
-```
-
-
-
-
-
 ## 17. NPU
 
-### NPU功能测试
+### 图像分类测试
 
 打开虚拟终端 或 调试串口终端，执行以下命令开始NPU功能测试
 
@@ -298,7 +266,7 @@ Begin perf ...
 
 
 
-## 18. MPP硬编解码测试
+## 18. MPP
 
 ### 硬编码测试
 
@@ -329,3 +297,16 @@ $ mpi_dec_test -t 7 -i test.h264 -n 100
 ```
 $ mpi_dec_test -t 16777220 -i test.h265 -n 10
 ```
+
+
+
+### chromium视频测试
+
+板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始chromium视频测试
+
+```
+$ source /rockchip-test/chromium/test_chromium_with_video.sh
+```
+
+
+
