--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -300,3 +300,13 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 
 
+## 19、WatchDog
+
+RK3566 开机默认开启开门狗，内核线程自动喂狗
+
+可用以下命令修改为用户层手动喂狗，并且每44秒必须重复执行以下命令喂狗，否则系统重启
+
+```
+$ echo A > /dev/watchdog
+```
+
