--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -134,7 +134,15 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ## 3. 系统启动
 
+Debian系统用户名/密码：kickpi
+
+Ubuntu系统用户名/密码：kickpi
+
+
+
 ### 图形化桌面登陆
+
+默认自动登录kickpi用户
 
 连接HDMI或LCD
 
@@ -142,7 +150,17 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### 调试串口登录
 
-Debian/Ubuntu系统用户名/密码：kickpi
+默认自动登录ROOT用户
+
+ROOT用户默认未设置密码，可用以下命令配置ROOT密码
+
+```
+$ sudo passwd root
+```
+
+
+
+
 
 
 
