--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -28,8 +28,8 @@
 | MIPI DSI    |           |            |          |
 | LVDS        |           |            |          |
 | EDP         |           |            |          |
-| MIPI CSI    |           |            |          |
-| USB CAMERA  |           |            |          |
+| MIPI Camera |           |            |          |
+| USB Camera  |           |            |          |
 | SPK         |           |            |          |
 | EAR PHONE   |           |            |          |
 | MIC         |           |            |          |
