--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -6,39 +6,39 @@
 
 ## K1A功能列表
 
-|             | Android13 | Ubuntu2004 | Debian11 |
-| ----------- | --------- | ---------- | -------- |
-| FAN         |           |            |          |
-| LED         |           |            |          |
-| USB3.0 HOST |           |            |          |
-| USB2.0 HOST |           |            |          |
-| USB2.0 OTG  |           |            |          |
-| IR          |           |            |          |
-| RTC         |           |            |          |
-| DEBUG UART  |           |            |          |
-| KEY         |           |            |          |
-| WatchDog    |           |            |          |
-| UART        |           |            |          |
-| SPI         |           |            |          |
-| PWM         |           |            |          |
-| ADC         |           |            |          |
-| I2C         |           |            |          |
-| CAN FD      |           |            |          |
-| HDMI        |           |            |          |
-| MIPI DSI    |           |            |          |
-| LVDS        |           |            |          |
-| EDP         |           |            |          |
-| MIPI Camera |           |            |          |
-| USB Camera  |           |            |          |
-| SPK         |           |            |          |
-| EAR PHONE   |           |            |          |
-| MIC         |           |            |          |
-| Line In     |           |            |          |
-| WIFI        |           |            |          |
-| BlueTooth   |           |            |          |
-| Ethernet    |           |            |          |
-| Mobile 4G   |           |            |          |
-| SD Card     |           |            |          |
-| USB Disk    |           |            |          |
-| SATA Disk   |           |            |          |
-| M.2 SSD     |           |            |          |
+|                  | Android13 | Ubuntu2004 | Debian11 |
+| ---------------- | --------- | ---------- | -------- |
+| FAN              |           |            |          |
+| LED              |           |            |          |
+| USB3.0 HOST      |           |            |          |
+| USB2.0 HOST      |           |            |          |
+| USB2.0 OTG       |           |            |          |
+| IR               |           |            |          |
+| RTC              |           |            |          |
+| DEBUG UART       |           |            |          |
+| KEY              |           |            |          |
+| WatchDog         |           |            |          |
+| UART             |           |            |          |
+| SPI              |           |            |          |
+| PWM              |           |            |          |
+| ADC              |           |            |          |
+| I2C              |           |            |          |
+| CAN FD           |           |            |          |
+| HDMI             |           |            |          |
+| MIPI DSI0        |           |            |          |
+| LVDS / MIPI DSI1 |           |            |          |
+| EDP              |           |            |          |
+| MIPI Camera      |           |            |          |
+| USB Camera       |           |            |          |
+| SPK              |           |            |          |
+| EAR PHONE        |           |            |          |
+| MIC              |           |            |          |
+| Line In          |           |            |          |
+| WIFI             |           |            |          |
+| BlueTooth        |           |            |          |
+| Ethernet         |           |            |          |
+| Mobile 4G        |           |            |          |
+| SD Card          |           |            |          |
+| USB Disk         |           |            |          |
+| SATA Disk        |           |            |          |
+| M.2 SSD          |           |            |          |
