--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -24,7 +24,7 @@
 | ADC              |           |            |          |
 | I2C              |           |            |          |
 | CAN FD           |           |            |          |
-| HDMI             |           |            |          |
+| HDMI OUT         |           |            |          |
 | MIPI DSI0        |           |            |          |
 | LVDS / MIPI DSI1 |           |            |          |
 | EDP              |           |            |          |
