--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -4,7 +4,7 @@
 
 
 
-## K1A功能列表
+## K1A Function List
 
 |                  | Android13 | Ubuntu2004 | Debian11 |
 | ---------------- | --------- | ---------- | -------- |
