--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -36,7 +36,7 @@
 | Line In            |           |            |          |
 | WIFI               |           |            |          |
 | BlueTooth          |           |            |          |
-| Ethernet           |           |            |          |
+| 1000M Ethernet X2  |           |            |          |
 | Mobile 4G          |           |            |          |
 | SD Card            |           |            |          |
 | USB Disk           |           |            |          |
