--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -6,39 +6,40 @@
 
 ## K1A Function List
 
-|                         | Android13 | Ubuntu2004 | Debian11 |
-| ----------------------- | --------- | ---------- | -------- |
-| FAN                     |           |            |          |
-| LED                     |           |            |          |
-| USB3.0 HOST             |           |            |          |
-| USB2.0 HOST             |           |            |          |
-| USB2.0 OTG              |           |            |          |
-| IR Receiver             | 1         |            |          |
-| RTC                     |           |            |          |
-| DEBUG UART              |           |            |          |
-| KEY                     |           |            |          |
-| WatchDog                |           |            |          |
-| UART                    |           |            |          |
-| SPI                     |           |            |          |
-| PWM                     |           |            |          |
-| ADC                     |           |            |          |
-| I2C                     |           |            |          |
-| HDMI OUT                |           |            |          |
-| MIPI DSI0               |           |            |          |
-| LVDS / MIPI DSI1        |           |            |          |
-| EDP                     |           |            |          |
-| MIPI Camera             |           |            |          |
-| USB Camera              |           |            |          |
-| SPK                     |           |            |          |
-| EAR PHONE               |           |            |          |
-| MIC                     |           |            |          |
-| Line In                 |           |            |          |
-| WIFI                    |           |            |          |
-| BlueTooth               |           |            |          |
-| 1000M Ethernet X2       |           |            |          |
-| Mobile 4G（MINI PCIE）  | 1         |            |          |
-| PCIE2.0 X1（MINI PCIE） |           |            |          |
-| SD Card                 |           |            |          |
-| USB Disk                |           |            |          |
-| SATA Disk               |           |            |          |
-| M.2 SSD                 |           |            |          |
+|                                   | Android13          | Ubuntu2004 | Debian11 |
+| --------------------------------- | ------------------ | ---------- | -------- |
+| FAN                               |                    |            |          |
+| Work LED                          | 1                  |            |          |
+| Power LED                         | 1                  |            |          |
+| USB3.0 HOST X1                    | 1                  |            |          |
+| USB2.0 HOST X1                    | 1                  |            |          |
+| USB2.0 OTG X1                     | 1                  |            |          |
+| IR Receiver                       | 1                  |            |          |
+| RTC                               | 1                  |            |          |
+| DEBUG UART                        | 1                  |            |          |
+| KEY（Recovery + RESET + MASKROM） | 1                  |            |          |
+| WatchDog                          | 1                  |            |          |
+| UART                              |                    |            |          |
+| SPI                               |                    |            |          |
+| PWM                               |                    |            |          |
+| ADC                               |                    |            |          |
+| I2C                               |                    |            |          |
+| HDMI OUT                          | 1                  |            |          |
+| MIPI DSI0                         | 1，I2C相同双屏异触 |            |          |
+| LVDS / MIPI DSI1                  | 1                  |            |          |
+| EDP                               | 1                  |            |          |
+| MIPI Camera                       | 1                  |            |          |
+| USB Camera                        | 1                  |            |          |
+| SPK                               | 1                  |            |          |
+| HeadPhone                         | 1                  |            |          |
+| MIC                               | 1                  |            |          |
+| WIFI AP6398S                      | 0                  |            |          |
+| BlueTooth AP6398S                 | 0                  |            |          |
+| 1000M Ethernet X2                 | 1                  |            |          |
+| Mobile 4G（MINI PCIE）            | 1                  |            |          |
+| PCIE2.0 X1（MINI PCIE）           | 1                  |            |          |
+| SD Card                           | 1                  |            |          |
+| USB Disk                          | 1                  |            |          |
+| SATA Disk                         | 1                  |            |          |
+| M.2 PCIE3.0 X2                    | 0                  |            |          |
+| 2X20PIN                           | 0                  |            |          |
