--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -6,40 +6,40 @@
 
 ## K1A Function List
 
-|                                   | Android13          | Ubuntu2004 | Debian11 |
-| --------------------------------- | ------------------ | ---------- | -------- |
-| FAN                               |                    |            |          |
-| Work LED                          | 1                  |            |          |
-| Power LED                         | 1                  |            |          |
-| USB3.0 HOST X1                    | 1                  |            |          |
-| USB2.0 HOST X1                    | 1                  |            |          |
-| USB2.0 OTG X1                     | 1                  |            |          |
-| IR Receiver                       | 1                  |            |          |
-| RTC                               | 11                 |            |          |
-| DEBUG UART                        | 1                  |            |          |
-| KEY（Recovery + RESET + MASKROM） | 1                  |            |          |
-| WatchDog                          | 1                  |            |          |
-| UART                              |                    |            |          |
-| SPI                               |                    |            |          |
-| PWM                               |                    |            |          |
-| ADC                               |                    |            |          |
-| I2C                               |                    |            |          |
-| HDMI OUT                          | 1                  |            |          |
-| MIPI DSI0                         | 1，I2C相同双屏异触 |            |          |
-| LVDS / MIPI DSI1                  | 1                  |            |          |
-| EDP                               | 1                  |            |          |
-| MIPI Camera                       | 1                  |            |          |
-| USB Camera                        | 1                  |            |          |
-| SPK                               | 1                  |            |          |
-| HeadPhone                         | 1                  |            |          |
-| MIC                               | 1                  |            |          |
-| WIFI AP6398S                      | 0                  |            |          |
-| BlueTooth AP6398S                 | 0                  |            |          |
-| 1000M Ethernet X2                 | 1                  |            |          |
-| Mobile 4G（MINI PCIE）            | 1                  |            |          |
-| PCIE2.0 X1（MINI PCIE）           | 1                  |            |          |
-| SD Card                           | 1                  |            |          |
-| USB Disk                          | 1                  |            |          |
-| SATA Disk                         | 1                  |            |          |
-| M.2 PCIE3.0 X2                    | 0                  |            |          |
-| 2X20PIN                           | 0                  |            |          |
+|                                   | Android13 | Ubuntu2004 | Debian11 |
+| --------------------------------- | --------- | ---------- | -------- |
+| FAN                               |           |            |          |
+| Work LED                          | 11        |            |          |
+| Power LED                         | 11        |            |          |
+| USB3.0 HOST X1                    | 1         |            |          |
+| USB2.0 HOST X1                    | 1         |            |          |
+| USB2.0 OTG X1                     | 1         |            |          |
+| IR Receiver                       | 11        |            |          |
+| RTC                               | 11        |            |          |
+| DEBUG UART                        | 11        |            |          |
+| KEY（Recovery + RESET + MASKROM） | 11        |            |          |
+| WatchDog                          | 11        |            |          |
+| UART X4                           |           |            |          |
+| SPI X1                            |           |            |          |
+| PWM                               |           |            |          |
+| ADC X1                            |           |            |          |
+| I2C X2                            |           |            |          |
+| HDMI OUT                          | 1         |            |          |
+| MIPI DSI0                         | 1         |            |          |
+| LVDS / MIPI DSI1                  | 1         |            |          |
+| EDP                               | 1         |            |          |
+| MIPI Camera                       | 1         |            |          |
+| USB Camera                        | 1         |            |          |
+| SPK                               | 1         |            |          |
+| HeadPhone                         | 1         |            |          |
+| MIC                               | 1         |            |          |
+| WIFI AP6398S                      | 0         |            |          |
+| BlueTooth AP6398S                 | 0         |            |          |
+| 1000M Ethernet X2                 | 1         |            |          |
+| Mobile 4G（MINI PCIE）            | 1         |            |          |
+| PCIE2.0 X1（MINI PCIE）           | 1         |            |          |
+| SD Card                           | 1         |            |          |
+| USB Disk                          | 1         |            |          |
+| SATA Disk                         | 1         |            |          |
+| M.2 PCIE3.0 X2                    | 0         |            |          |
+| 2X20PIN                           | 0         |            |          |
