--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -19,11 +19,12 @@
 | DEBUG UART                        | 11        |            |          |
 | KEY（Recovery + RESET + MASKROM） | 11        |            |          |
 | WatchDog                          | 11        |            |          |
-| UART X4                           |           |            |          |
-| SPI X1                            |           |            |          |
-| PWM                               |           |            |          |
-| ADC X1                            |           |            |          |
-| I2C X2                            |           |            |          |
+| 40Pin UART X4                     | 1         |            |          |
+| 40Pin SPI X1                      | 1         |            |          |
+| 40Pin PWM                         | 1         |            |          |
+| 40Pin ADC X1                      | 1         |            |          |
+| 40Pin I2C X2                      | 1         |            |          |
+| 40Pin GPIO                        |           |            |          |
 | HDMI OUT                          | 1         |            |          |
 | MIPI DSI0                         | 1         |            |          |
 | LVDS / MIPI DSI1                  | 1         |            |          |
@@ -33,13 +34,12 @@
 | SPK                               | 1         |            |          |
 | HeadPhone                         | 1         |            |          |
 | MIC                               | 1         |            |          |
-| WIFI AP6398S                      | 0         |            |          |
-| BlueTooth AP6398S                 | 0         |            |          |
+| WIFI AP6398S                      | 1         |            |          |
+| BlueTooth AP6398S                 | 1         |            |          |
 | 1000M Ethernet X2                 | 1         |            |          |
 | Mobile 4G（MINI PCIE）            | 1         |            |          |
 | PCIE2.0 X1（MINI PCIE）           | 1         |            |          |
-| SD Card                           | 1         |            |          |
+| SD Card                           | 11        |            |          |
 | USB Disk                          | 1         |            |          |
 | SATA Disk                         | 1         |            |          |
-| M.2 PCIE3.0 X2                    | 0         |            |          |
-| 2X20PIN                           | 0         |            |          |
+| M.2 PCIE3.0 X2                    | 1         |            |          |
