--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -19,24 +19,24 @@
 | DEBUG UART                        | 11        |            |          |
 | KEY（Recovery + RESET + MASKROM） | 11        |            |          |
 | WatchDog                          | 11        |            |          |
-| 40Pin UART X4                     | 1         |            |          |
-| 40Pin SPI X1                      | 1         |            |          |
-| 40Pin PWM                         | 1         |            |          |
-| 40Pin ADC X1                      | 1         |            |          |
-| 40Pin I2C X2                      | 1         |            |          |
-| 40Pin GPIO                        |           |            |          |
-| HDMI OUT                          | 1         |            |          |
-| MIPI DSI0                         | 1         |            |          |
-| LVDS / MIPI DSI1                  | 1         |            |          |
-| EDP                               | 1         |            |          |
+| 40Pin UART X4                     | 11        |            |          |
+| 40Pin SPI X1                      | 11        |            |          |
+| 40Pin PWM                         | 11        |            |          |
+| 40Pin ADC X1                      | 11        |            |          |
+| 40Pin I2C X2                      | 11        |            |          |
+| 40Pin GPIO                        | 11        |            |          |
+| HDMI OUT                          | 11        |            |          |
+| MIPI DSI0                         | 11        |            |          |
+| LVDS / MIPI DSI1                  | 11        |            |          |
+| EDP                               | 11        |            |          |
 | MIPI Camera                       | 1         |            |          |
-| USB Camera                        | 1         |            |          |
-| SPK                               | 1         |            |          |
-| HeadPhone                         | 1         |            |          |
-| MIC                               | 1         |            |          |
+| USB Camera                        | 11        |            |          |
+| SPK                               | 11        |            |          |
+| HeadPhone                         | 11        |            |          |
+| MIC                               | 11        |            |          |
 | WIFI AP6398S                      | 1         |            |          |
 | BlueTooth AP6398S                 | 1         |            |          |
-| 1000M Ethernet X2                 | 1         |            |          |
+| 1000M Ethernet X2                 | 11        |            |          |
 | Mobile 4G（MINI PCIE）            | 1         |            |          |
 | PCIE2.0 X1（MINI PCIE）           | 11        |            |          |
 | SD Card                           | 11        |            |          |
