--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -1,2 +1,18 @@
-# 23-三屏异显方案
+# 23-三屏异显双触摸方案
+
+
+
+
+
+
+
+RK3568 显示接口
+
+
+
+| VP编号 | 支持显示接口                      | 最大分辨率     |
+| ------ | --------------------------------- | -------------- |
+| VP0    | MIPI0 / MIPI1 / HDMI / EDP        | 4096x2304@60Hz |
+| VP1    | MIPI0 / MIPI1 / LVDS / HDMI / EDP | 2048x1536@60Hz |
+| VP2    | LVDS / RGB                        | 1920x1080@60Hz |
 
