--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -4,15 +4,37 @@
 
 
 
+## 显示接口
 
+RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
-RK3568 显示接口
-
-
-
-| VP编号 | 支持显示接口                      | 最大分辨率     |
+| VP编号 | 支持显示屏                        | 最大分辨率     |
 | ------ | --------------------------------- | -------------- |
 | VP0    | MIPI0 / MIPI1 / HDMI / EDP        | 4096x2304@60Hz |
 | VP1    | MIPI0 / MIPI1 / LVDS / HDMI / EDP | 2048x1536@60Hz |
 | VP2    | LVDS / RGB                        | 1920x1080@60Hz |
+
+> MIPI0与LVDS接口引脚冲突，只能二选一
+>
+> VP2节点仅支持LVDS/RGB，所以三屏显示其中一路必须是LVDS（RGB接口未引出）
+>
+> 推荐方案：HDMI + MIPI1 + LVDS
+>
+> 推荐方案：
+
+
+
+
+
+
+
+## 三屏异显配置
+
+
+
+
+
+
+
+## 双屏异触配置
 
