--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -4,7 +4,7 @@
 
 
 
-## 显示接口
+## 显示接口资源
 
 RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
@@ -17,14 +17,6 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 > MIPI0与LVDS接口引脚冲突，只能二选一
 >
 > VP2节点仅支持LVDS/RGB，所以三屏显示其中一路必须是LVDS（RGB接口未引出）
->
-> 推荐方案：HDMI + MIPI1 + LVDS
->
-> 推荐方案：
-
-
-
-
 
 
 
