--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -4,7 +4,7 @@
 
 
 
-## 显示接口资源
+## 显示接口资源介绍
 
 RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
@@ -32,7 +32,6 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 #include "rk3568-kickpi-lcd-mipi1.dtsi"
 #include "rk3568-kickpi-lcd-lvds.dtsi"
 #include "rk3568-kickpi-lcd-hdmi.dtsi"
-
 ```
 
 
