--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -24,6 +24,10 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 示例方案：HDMI + MIPI1 + LVDS
 
+
+
+### 内核DTS配置
+
 ```
 $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
@@ -35,6 +39,8 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 ```
 
 
+
+### 多屏应用程序开发
 
 
 
