--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -6,40 +6,38 @@
 
 ## K1A Function List
 
-|                                   | Android13 | Ubuntu2004 | Debian11 |
-| --------------------------------- | --------- | ---------- | -------- |
-| FAN                               |           |            |          |
-| Work LED                          | 1         |            |          |
-| Power LED                         | 11        |            |          |
-| USB3.0 HOST X1                    | 1         |            |          |
-| USB2.0 HOST X1                    | 1         |            |          |
-| USB2.0 OTG X1                     | 1         |            |          |
-| IR Receiver                       | 11        |            |          |
-| RTC                               | 11        |            |          |
-| DEBUG UART                        | 11        |            |          |
-| KEY（Recovery + RESET + MASKROM） | 11        |            |          |
-| WatchDog                          | 11        |            |          |
-| 40Pin UART X4                     | 11        |            |          |
-| 40Pin SPI X1                      | 11        |            |          |
-| 40Pin PWM                         | 11        |            |          |
-| 40Pin ADC X1                      | 11        |            |          |
-| 40Pin I2C X2                      | 11        |            |          |
-| 40Pin GPIO                        | 11        |            |          |
-| HDMI OUT                          | 11        |            |          |
-| MIPI DSI0                         | 11        |            |          |
-| LVDS / MIPI DSI1                  | 11        |            |          |
-| EDP                               | 11        |            |          |
-| MIPI Camera                       | 1         |            |          |
-| USB Camera                        | 11        |            |          |
-| SPK                               | 11        |            |          |
-| HeadPhone                         | 11        |            |          |
-| MIC                               | 11        |            |          |
-| WIFI AP6398S                      | 1         |            |          |
-| BlueTooth AP6398S                 | 1         |            |          |
-| 1000M Ethernet X2                 | 11        |            |          |
-| Mobile 4G（MINI PCIE）            | 1         |            |          |
-| PCIE2.0 X1（MINI PCIE）           | 11        |            |          |
-| SD Card                           | 11        |            |          |
-| USB Disk                          | 11        |            |          |
-| SATA Disk                         | 11        |            |          |
-| M.2 PCIE3.0 X2                    | 11        |            |          |
+|                                   | Android13        | Ubuntu2004 | Debian11 |
+| --------------------------------- | ---------------- | ---------- | -------- |
+| FAN                               | 支持             |            |          |
+| Work LED                          | 支持             |            |          |
+| Power LED                         | 支持             |            |          |
+| USB3.0 HOST                       | x1               |            |          |
+| USB2.0 HOST                       | x1               |            |          |
+| USB2.0 OTG                        | x1               |            |          |
+| IR Receiver                       | 支持             |            |          |
+| RTC                               | 支持             |            |          |
+| DEBUG UART                        | 支持             |            |          |
+| KEY（Recovery + RESET + MASKROM） | 支持             |            |          |
+| WatchDog                          | 支持             |            |          |
+| Extend 40Pin UART                 | x4               |            |          |
+| Extend 40Pin SPI                  | x1               |            |          |
+| Extend 40Pin PWM                  | 11               |            |          |
+| Extend 40Pin ADC                  | x1               |            |          |
+| Extend 40Pin I2C                  | x2               |            |          |
+| Extend 40Pin GPIO                 | x28              |            |          |
+| HDMI OUT                          | x1               |            |          |
+| MIPI DSI                          | x2               |            |          |
+| LVDS                              | x1               |            |          |
+| EDP                               | x1               |            |          |
+| MIPI Camera                       | 4LaneX1或2LaneX2 |            |          |
+| SPK                               | 支持             |            |          |
+| HeadPhone                         | 支持             |            |          |
+| MIC                               | 支持             |            |          |
+| WIFI                              | AP6398S          |            |          |
+| BlueTooth                         | AP6398S          |            |          |
+| 1000M Ethernet                    | x2               |            |          |
+| MINI PCIE Mobile 4G               | 支持             |            |          |
+| MINI PCIE PCIE2.0 X1              | 支持             |            |          |
+| SD Card                           | 支持             |            |          |
+| SATA3.0                           | x1               |            |          |
+| M.2 PCIE3.0 X2                    | 11               |            |          |
