--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -11,33 +11,33 @@
 | FAN                               | 支持             |            |          |
 | Work LED                          | 支持             |            |          |
 | Power LED                         | 支持             |            |          |
-| USB3.0 HOST                       | x1               |            |          |
-| USB2.0 HOST                       | x1               |            |          |
-| USB2.0 OTG                        | x1               |            |          |
+| USB3.0 HOST                       | X1               |            |          |
+| USB2.0 HOST                       | X1               |            |          |
+| USB2.0 OTG                        | X1               |            |          |
 | IR Receiver                       | 支持             |            |          |
 | RTC                               | 支持             |            |          |
 | DEBUG UART                        | 支持             |            |          |
 | KEY（Recovery + RESET + MASKROM） | 支持             |            |          |
 | WatchDog                          | 支持             |            |          |
-| Extend 40Pin UART                 | x4               |            |          |
-| Extend 40Pin SPI                  | x1               |            |          |
+| Extend 40Pin UART                 | X4               |            |          |
+| Extend 40Pin SPI                  | X1               |            |          |
 | Extend 40Pin PWM                  | 11               |            |          |
-| Extend 40Pin ADC                  | x1               |            |          |
-| Extend 40Pin I2C                  | x2               |            |          |
-| Extend 40Pin GPIO                 | x28              |            |          |
-| HDMI OUT                          | x1               |            |          |
-| MIPI DSI                          | x2               |            |          |
-| LVDS                              | x1               |            |          |
-| EDP                               | x1               |            |          |
+| Extend 40Pin ADC                  | X1               |            |          |
+| Extend 40Pin I2C                  | X2               |            |          |
+| Extend 40Pin GPIO                 | X28              |            |          |
+| HDMI OUT                          | X1               |            |          |
+| MIPI DSI                          | X2               |            |          |
+| LVDS                              | X1               |            |          |
+| EDP                               | X1               |            |          |
 | MIPI Camera                       | 4LaneX1或2LaneX2 |            |          |
 | SPK                               | 支持             |            |          |
 | HeadPhone                         | 支持             |            |          |
 | MIC                               | 支持             |            |          |
 | WIFI                              | AP6398S          |            |          |
 | BlueTooth                         | AP6398S          |            |          |
-| 1000M Ethernet                    | x2               |            |          |
+| 1000M Ethernet                    | X2               |            |          |
 | MINI PCIE Mobile 4G               | 支持             |            |          |
 | MINI PCIE PCIE2.0 X1              | 支持             |            |          |
 | SD Card                           | 支持             |            |          |
-| SATA3.0                           | x1               |            |          |
-| M.2 PCIE3.0 X2                    | 11               |            |          |
+| SATA3.0                           | X1               |            |          |
+| M.2 PCIE3.0 X2                    | 2LaneX1          |            |          |
