--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -20,7 +20,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-## 三屏显示配置
+## 多屏显示配置
 
 示例方案：HDMI + MIPI1 + LVDS
 
@@ -46,7 +46,7 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-## 双屏异触配置
+## 多屏触摸配置
 
 示例方案：I2C + USB
 
