--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -26,7 +26,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-### 内核DTS配置
+### 设备树配置
 
 ```
 $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
@@ -46,13 +46,23 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
+
+
 ## 多屏触摸配置
 
 示例方案：I2C + USB
 
 
 
+### 设备树配置
 
+
+
+
+
+
+
+### 
 
 
 
