--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -40,7 +40,13 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-### 多屏应用程序开发
+### Android多屏显示应用程序开发
+
+
+
+
+
+### UBUNTU/DEBIAN多屏显示配置
 
 
 
@@ -60,9 +66,4 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-
-
-### 
-
-
-
+### Android
