--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -66,4 +66,11 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-### Android
+### Android多屏触摸配置
+
+
+
+
+
+### UBUNUT/DEBIAN多屏触摸配置
+
