--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -26,7 +26,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-### 设备树配置
+### 内核设备树配置
 
 ```
 $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
@@ -60,7 +60,7 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-### 设备树配置
+### 内核设备树配置
 
 
 
