--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -42,6 +42,20 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 ### Android多屏显示应用程序开发
 
+* DSI作为主屏，HDMI-A作为副屏
+
+```
+PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.primary=DSI
+PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=HDMI-A
+```
+
+* DSI\eDP作为主屏，LVDS\HDMI-A作为副屏
+
+```
+PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.primary=DSI,eDP
+PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
+```
+
 
 
 
@@ -64,9 +78,13 @@ $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
+
+
+### Android单屏触摸配置
+
+
+
 ### Android多屏触摸配置
-
-
 
 
 
