--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -80,6 +80,11 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 ### Android单屏触摸配置
 
+```
+$ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
+	device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
+```
+
 
 
 
