--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -82,7 +82,22 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 ```
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
-	device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
+
+    // Determine whether the device is external or internal.
+    if (isExternalDeviceLocked(device)) {
+        device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
+    }
+```
+
+
+
+```
+$ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
+
+	// Determine whether the device is external or internal.
+    if (device->isExternalDeviceLocked()) {
+        device->classes |= InputDeviceClass::EXTERNAL;
+    }
 ```
 
 
