--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -80,6 +80,8 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 ### Android单屏触摸配置
 
+* Android11.0
+
 ```
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
@@ -89,7 +91,7 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
     }
 ```
 
-
+* Android13.0
 
 ```
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
