--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -74,7 +74,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 ### 内核设备树配置
 
-示例方案：I2C + USB
+I2C + I2C
 
 
 
@@ -87,7 +87,8 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
     // Determine whether the device is external or internal.
     if (isExternalDeviceLocked(device)) {
-        device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
+-        device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
++        //device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
     }
 ```
 
@@ -98,7 +99,8 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
 	// Determine whether the device is external or internal.
     if (device->isExternalDeviceLocked()) {
-        device->classes |= InputDeviceClass::EXTERNAL;
+-        device->classes |= InputDeviceClass::EXTERNAL;
++        //device->classes |= InputDeviceClass::EXTERNAL;
     }
 ```
 
