--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -258,6 +258,12 @@ Begin perf ...
 
 ## 18. MPP
 
+Rockchip MPP提供mpi_enc_test、mpi_dec_test等测试工具
+
+可直接命令行调用MPI进行硬件编解码测试
+
+
+
 ### 硬编码测试
 
 * 编码H.264 4096x2160 100帧测试
@@ -272,7 +278,9 @@ $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 $ mpi_enc_test -w 4096 -h 2160 -t 16777220 -o ./test.h265 -n 100
 ```
 
-
+> 参数解析：
+>
+> 
 
 ### 硬解码测试
 
