--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -280,7 +280,17 @@ $ mpi_enc_test -w 4096 -h 2160 -t 16777220 -o ./test.h265 -n 100
 
 > 参数解析：
 >
-> 
+> ​	mpi_enc_test		MPP编码测试工具
+>
+> ​	-w 4096 -h 2160		指定编码视频分辨率为4096x2160
+>
+> ​	-t 16777220				指定编码类型为H.265
+>
+> ​	-o ./test.h265			指定编码内容输出文件
+>
+> ​	-n 100						指定编码帧数
+
+
 
 ### 硬解码测试
 
