--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -318,7 +318,19 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 
 
-## 19. WatchDog
+## 19. GStreamer
+
+
+
+
+
+
+
+
+
+
+
+## 20. WatchDog
 
 RK3566 开机默认开启开门狗，内核线程自动喂狗
 
