--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -58,8 +58,6 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-
-
 ### UBUNTU/DEBIAN多屏显示配置
 
 示例方案：HDMI + MIPI1 + LVDS
@@ -107,6 +105,10 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
 
 ### Android多屏触摸配置
+
+```
+frameworks/native/services/inputflinger/reader/EventHub.cpp
+```
 
 
 
