--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -107,7 +107,7 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 ### Android多屏触摸配置
 
 ```
-frameworks/native/services/inputflinger/reader/EventHub.cpp
+$ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
 bool EventHub::isExternalDeviceLocked(Device* device) {
 	const char *I2C_DEVICE_NAME = "generic ft5x06 (79)";
