--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -110,17 +110,22 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
 bool EventHub::isExternalDeviceLocked(Device* device) {
-	const char *I2C_DEVICE_NAME = "generic ft5x06 (79)";
-	ALOGE("input deviceis '%s' ",device->identifier.name.c_str());
-	if (strcmp(device->identifier.name.c_str(), I2C_DEVICE_NAME) == 0) {
-		return true;
-	}
++	const char *I2C_DEVICE_NAME = "generic ft5x06 (79)";
++	ALOGE("input deviceis '%s' ",device->identifier.name.c_str());
++	if (strcmp(device->identifier.name.c_str(), I2C_DEVICE_NAME) == 0) {
++		return true;
++	}
+
+	if (device->configuration) {
+	bool value;
 }
 ```
 
 
 
 * 添加IDC配置文件
+
+
 
 
 
